# open-weave

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  cross-compile.yml  publish.yml
bench/: criterion_bench.rs
bindings/go/: agent.go  go.mod
bindings/javascript/: package.json  tsconfig.json
bindings/javascript/src/: agent.ts  ffi.ts
bindings/python/: pyproject.toml
bindings/python/openweave/: __init__.py  _ffi.py  agent.py
crates/openweave-core/: Cargo.toml
crates/openweave-core/src/: agent.rs  error.rs  lib.rs
crates/openweave-core/src/llm/: anthropic.rs  google.rs  groq.rs  mod.rs  ollama.rs  openai.rs
crates/openweave-core/src/memory/: long_term.rs  mod.rs  short_term.rs
crates/openweave-core/src/orchestrator/: team.rs
crates/openweave-core/src/planner/: mod.rs  react.rs
crates/openweave-core/src/sandbox/: wasm.rs
crates/openweave-core/src/tools/: executor.rs  mod.rs  registry.rs
crates/openweave-edge/: Cargo.toml
crates/openweave-edge/src/: allocator.rs  lib.rs  wasm_target.rs
crates/openweave-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/openweave-ffi/src/: lib.rs
examples/edge/: lambda_agent.rs  wasm_browser.rs
examples/go/: research_agent.go
examples/javascript/: research_agent.ts
examples/python/: research_agent.py
examples/rust/: multi_agent_team.rs  research_agent.rs
tools/: code_exec.rs  file_ops.rs  web_search.rs
