[workspace]
members = [
    "crates/openweave-core",
    "crates/openweave-ffi",
    "crates/openweave-edge"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenWeave Contributors"]
license = "Apache-2.0"
repository = "https://github.com/openweave/openweave"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
wasmtime = "18"
cbindgen = "0.26"
wasm-bindgen = "0.2"
embassy-executor = "0.5"
openweave-core = { path = "crates/openweave-core" }