[package]
name = "openweave-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
uuid.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
tracing = "0.1.44"

[[example]]
name = "research_agent"
path = "../../examples/rust/research_agent.rs"

[[example]]
name = "multi_agent_team"
path = "../../examples/rust/multi_agent_team.rs"
